# mementodevice.github.io

./: CMakeLists.txt  DISCLAIMER.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  index.html  partitions.csv  sdkconfig  sdkconfig.defaults
components/board_power_bsp/: board_power_bsp.cpp  board_power_bsp.h
components/button_bsp/: button_bsp.c
components/dms_config/: CMakeLists.txt  dms_config.c
components/dms_config/include/: dms_config.h
components/dms_crypto/: CMakeLists.txt  dms_crypto.c
components/dms_crypto/include/: dms_crypto.h
components/dms_secret/: CMakeLists.txt  dms_secret.c
components/dms_secret/include/: dms_secret.h
components/dms_ui/: CMakeLists.txt  dms_ui.c  logo_img.c
components/dms_ui/fonts/: README.md  font_memento_14.c
components/dms_ui/include/: dms_ui.h
components/dms_vault/: CMakeLists.txt  dms_vault.c
components/dms_vault/include/: dms_vault.h
components/dms_web/: CMakeLists.txt  dms_web.c
components/dms_web/include/: dms_web.h
components/user_app/: CMakeLists.txt  user_app.cpp
docs/: TECHNICAL_GUIDE.md  USER_GUIDE.md  config_reference.csv
main/: main.cpp  user_config.h
